# synonyms

./: .gitignore  README.md  pyproject.toml
synonyms/: cli.py  find_synonyms.py  http.py  http_client.py
synonyms/http/: client.py
tests/: test_client.py  test_http_client.py  test_synonyms.py
tests/resources/: synonyms.html
