[tool.poetry]
name = "synonyms"
version = "0.1.0"
description = "List synonyms"
authors = ["Daniel Gregory"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
